--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - "4567:4567"
     volumes:
       - ./backend-flask:/backend-flask
-    healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:4567/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3    
+    #healthcheck:
+     # test: ["CMD-SHELL", "curl --fail http://localhost:4567/health || exit 1"]
+    #  interval: 30s
+    #  timeout: 10s
+    #  retries: 3    
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
@@ -22,13 +22,12 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend-react-js:/frontend-react-js
-    depends_on:
-      - backend-flask 
-    healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:3000/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    #depends_on:
+     #healthcheck:
+      #test: ["CMD-SHELL", "curl --fail http://localhost:3000/health || exit 1"]
+      #interval: 30s
+      #timeout: 10s
+      #retries: 3
   dynamodb-local:
     # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
     # We needed to add user:root to get this working.
