added  otel container to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,17 @@ services:
     volumes: 
       - db:/var/lib/postgresql/data  
 
+#opentelemetry container
+  otel-collector:
+    image: "otel/opentelemetry-collector"
+    environment:
+      HONEYCOMB_API_KEY: "${HONEYCOMB_API_KEY}" # Same honeycomb api key used in the backend enviroment
+    command: [--config=/etc/otel-collector-config.yaml]
+    volumes:
+      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    ports:
+      - 14268:14268
+      - 4318:4318
 # the name flag is a hack to change the default prepend folder
 # name when outputting the image names
 networks: 
