--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,7 +16,12 @@ tasks:
           @opentelemetry/sdk-trace-web \
           @opentelemetry/exporter-trace-otlp-http \
           @opentelemetry/context-zone
-                      
+          @opentelemetry/instrumentation \
+          @opentelemetry/instrumentation-xml-http-request \
+          @opentelemetry/instrumentation-fetch
+
+
+
   - name: postgres
     init: |
       curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
