--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_oOAOxsjkX" 
-      REACT_APP_CLIENT_ID: "3t59qlp5mgvql7293oiaif7p03"      
+      REACT_APP_AWS_USER_POOLS_ID: "${REACT_APP_AWS_USER_POOLS_ID}" 
+      REACT_APP_CLIENT_ID: "${REACT_APP_CLIENT_ID}"      
     build: ./frontend-react-js
     ports:
       - "3000:3000"
