--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
      # test: ["CMD-SHELL", "curl --fail http://localhost:4567/health || exit 1"]
     #  interval: 30s
     #  timeout: 10s
-    #  retries: 3    
+    #  retries: 3    aa
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
